# fluorite

./: '  Cargo.toml  README.md
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs  utils.rs
codegen/src/code_gen/: generator.rs  utils.rs
codegen/src/code_gen/abi/: type_info.rs
codegen/src/code_gen/rust/: context.rs  mod.rs  options.rs  package_writer.rs  pre_processor.rs  type_writer.rs
codegen/src/code_gen/ts/: mod.rs
codegen/src/definitions/: custom_type.rs  custom_type_list.rs  definition.rs  definition_config.rs  enum_value_list.rs  field.rs  field_config.rs  field_list.rs  mod.rs  rust_type_wrapper.rs  simple_type.rs
codegen/src/fluorite/: definition.yaml
codegen/tests/: rust_code_gen.rs  serde_test.rs
examples/: orders.yml  simple.yml  users.yml
examples/demo/: Cargo.toml  build.rs
examples/demo/fluorite/: demo.yaml
examples/demo/src/: main.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/tests/: test_serde_any.rs
src/: lib.rs  main.rs  utils.rs
src/code_gen/: abi.rs  code_gen.rs  generator.rs  mod.rs  utils.rs
src/code_gen/abi/: type_info.rs
src/code_gen/rust/: context.rs  mod.rs  options.rs  package_writer.rs  pre_processor.rs  type_graph.rs  type_writer.rs
src/code_gen/ts/: mod.rs
src/definitions/: mod.rs
src/fluorite/: definition.yaml
tests/: rust_code_gen.rs  serde_test.rs
