[package]
name = "fluorite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fluorite"

[[bin]]
name = "fluorite"

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.1", features = ["derive"] }
serde = {version = "1.0.193", features =["serde_derive"]}
serde_yaml = "0.9.29"

