[workspace]
members = [
    "codegen",
    "runtime",
    "examples/demo"
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["IDL", "schema", "codegen"]
authors = ["Xiaoguang Zhang <zhxiaog@outlook.com>"]
description = "Generate rust/typescript codes from schemas specified by Yaml/JSON."
repository = "https://github.com/zhxiaogg/fluorite"
exclude = [".*"]

