[package]
name = "fluorite"
documentation = "https://docs.rs/fluorite"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
name = "fluorite"
path = "src/lib.rs"

[[bin]]
name = "fluorite"

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.1", features = ["derive"] }
serde = {version = "1.0.193", features =["serde_derive"]}
serde_yaml = "0.9.29"

