[package]
name = "fluorite"
documentation = "https://docs.rs/fluorite"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name="fluorite"
path="src/lib.rs"

[dependencies]
serde = {version = "1.0.193", features =["serde_derive"]}

[dev-dependencies]
anyhow = "1.0.76"
serde_json = "1.0.108"


