[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.193", features =["serde_derive"]}

[build-dependencies]
fluorite =  {path = "../../"}
serde_yaml = "0.9.29"
anyhow = "1.0.76"
