[package]
name = "demo"
documentation = "https://docs.rs/fluorite"
readme = "../README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
serde = {version = "1.0.193", features =["serde_derive"]}
fluorite = {path = "../../runtime/"}
serde_json = "1.0.108"

[build-dependencies]
fluorite_codegen =  {path = "../../codegen"}
